feat: Authentication rework